// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Home should render correctly 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                      ▄                         
                     █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█                    
                     █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀                    
                     ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀                    
                                                       local                    
                                                                                
                     Commands                         ctrl+p                    
                     List sessions                  ctrl+x l                    
                     Switch model                   ctrl+x m                    
                     Switch agent                        tab                    
                                                                                
                                                                                
   ┃                                                                         ┃  
   ┃ >                                                                       ┃  
   ┃                                                                         ┃  
   OpenCode Zen Big Pickle                                                      
                                                                                
                                                                                
                                                                                
                                                                                
 opencode vlocal  /tmp/oc-test/project                        tab  BUILD AGENT 
"
`;

exports[`Home should resize correctly 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ >                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home prompt should start a new session 1`] = `
"                                                                                
  ┃ # Analyzing Hello world                                                  ┃  
  ┃ /share to create a shareable link                     19,094/10% ($0.00) ┃  
                                                                                
  ┃                                                                             
  ┃  Hello, world!                                                              
  ┃  haris (4:00:00 PM)                                                         
  ┃                                                                             
                                                                                
     Hello! How can I help you with your software engineering tasks today?      
                                                                                
     Build big-pickle                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ┃                                                                          ┃  
  ┃ >                                                                        ┃  
  ┃                                                                          ┃  
  OpenCode Zen Big Pickle                                      ctrl+p commands  
                                                                                
 opencode vlocal  /tmp/oc-test/project                        tab  BUILD AGENT 
"
`;

exports[`Home Toast should render correctly 1`] = `
"                                                            
                                                            
                             ┃                           ┃  
           █▀▀█ █▀▀█ █▀▀█ █▀▀┃  This is a toast message  ┃  
           █░░█ █░░█ █▀▀▀ █░░┃                           ┃  
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ >                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Toast should clear after timeout 1`] = `
"                                                            
                                                            
                             ┃                           ┃  
           █▀▀█ █▀▀█ █▀▀█ █▀▀┃  Toast Title              ┃  
           █░░█ █░░█ █▀▀▀ █░░┃                           ┃  
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ┃  This is a toast message  ┃  
                             ┃                           ┃  
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ >                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Toast should clear after timeout 2`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ >                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt ! mode ! should open shell mode 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ !                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt ! mode esc should revert to normal mode 1`] = `
"                                                            
TODO: marked as failing
"
`;

exports[`Home Prompt ! mode backspace should revert to normal mode 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ >                                                    ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete / mode / should open autocomplete 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
  ┃ /long-command  Long command                          ┃  
  ┃ /e             Short command                         ┃  
  ┃ /init          create/update AGENTS.md               ┃  
  ┃ /new           create a new session                  ┃  
  ┃ /models        list models                           ┃  
  ┃ /agents        list agents                           ┃  
  ┃ /session       list sessions                         ┃  
  ┃ /status        show status                           ┃  
  ┃ /theme         toggle theme                          ┃  
  ┃ /editor        open editor                           ┃  
  ┃                                                      ┃  
  ┃ > /                                                  ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete / mode should not open in the middle of text 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah /                                             ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete / mode should narrow /ex input to /exit 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
  ┃ /exit          exit the app                          ┃  
  ┃                                                      ┃  
  ┃ > /ex                                                ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete / mode enter on custom command should expect args 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > /long-command arg1 arg2                            ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete / mode / exact matches should be prioritized 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
  ┃ /e             Short command                         ┃  
  ┃ /exit          exit the app                          ┃  
  ┃ /editor        open editor                           ┃  
  ┃ /new           create a new session                  ┃  
  ┃ /session       list sessions                         ┃  
  ┃ /help          show help                             ┃  
  ┃ /init          create/update AGENTS.md               ┃  
  ┃ /theme         toggle theme                          ┃  
  ┃ /agents        list agents                           ┃  
  ┃ /models        list models                           ┃  
  ┃                                                      ┃  
  ┃ > /e                                                 ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode @ should open autocomplete 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
  ┃ @docs                                                ┃  
  ┃ files/                                               ┃  
  ┃                                                      ┃  
  ┃ > @                                                  ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode should match items correctly 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
  ┃ files/1.txt                                          ┃  
  ┃                                                      ┃  
  ┃ > @file1                                             ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode should trigger in the middle of text 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
  ┃ files/1.txt                                          ┃  
  ┃                                                      ┃  
  ┃ > blah @file1                                        ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode enter should confirm choice 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > @files/2.txt                                       ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode tab should confirm choice 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > @files/1.txt                                       ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode esc should close 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > @file1                                             ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Prompt Autocomplete @ mode clearing input should close 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah                                               ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Agent cycling tab should switch agent, with wrap-around 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah blah                                          ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project     tab  PLAN AGENT 
"
`;

exports[`Home Agent cycling tab should switch agent, with wrap-around 2`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah blah                                          ┃  
  ┃                                                      ┃  
  OpenCode Zen Grok Code Fast 1                             
                                                            
 opencode vlocal  /tmp/oc-test/project     tab  DOCS AGENT 
"
`;

exports[`Home Agent cycling tab should switch agent, with wrap-around 3`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah blah                                          ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project    tab  BUILD AGENT 
"
`;

exports[`Home Agent cycling backtab should switch agent in reverse, with wrap-around 1`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah blah                                          ┃  
  ┃                                                      ┃  
  OpenCode Zen Grok Code Fast 1                             
                                                            
 opencode vlocal  /tmp/oc-test/project     tab  DOCS AGENT 
"
`;

exports[`Home Agent cycling backtab should switch agent in reverse, with wrap-around 2`] = `
"                                                            
                                                            
                                            ▄               
           █▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█          
           █░░█ █░░█ █▀▀▀ █░░█ █░░░ █░░█ █░░█ █▀▀▀          
           ▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          
                                             local          
                                                            
           Commands                         ctrl+p          
           List sessions                  ctrl+x l          
           Switch model                   ctrl+x m          
           Switch agent                        tab          
                                                            
                                                            
  ┃                                                      ┃  
  ┃ > blah blah                                          ┃  
  ┃                                                      ┃  
  OpenCode Zen Big Pickle                                   
                                                            
 opencode vlocal  /tmp/oc-test/project     tab  PLAN AGENT 
"
`;
